* Updated version number to 0.2.15. * Updated doc/TODO. * Removed Dev-Cpp project files. If you're still using Dev-Cpp to compile anything in 2012, then you can probably maintain your old archived project files too. * Using M_PI from math.h instead of 3.1416. * Removed some unnecessary code.
git-svn-id: svn://svn.otland.net/private/forgottenserver/branches/0.2@5784 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/doc/README
+++ b/doc/README
@@ -3,7 +3,7 @@
 		The Forgotten Server
 
 	Version
-		0.2.14
+		0.2.15
 
 	Codenamed
 		"Mystic Spirit"
@@ -35,8 +35,8 @@
 		Elf
 			C++ Programmer
 
-		Dalkon
-			C++ Programmer
+		Tryller
+			Data Directory Manager
 ]
 
 [ LICENSE
@@ -75,11 +75,11 @@
 
 		Downloading the source code
 			Launch a terminal, and paste in this command:
-				svn co svn://svn.otland.net/public/forgottenserver/tags/0.2.14
+				svn co svn://svn.otland.net/public/forgottenserver/tags/0.2.15
 
 		Compiling
 			Launch a terminal, and type this command:
-				cd 0.2.14/ && make
+				cd 0.2.15/ && make
 
 	Windows
 		Code::Blocks
