--- a/doc/TODO
+++ b/doc/TODO
@@ -3,7 +3,7 @@
 		The Forgotten Server
 
 	Version
-		0.2.14
+		0.2.15
 
 	Codenamed
 		"Mystic Spirit"
@@ -16,7 +16,6 @@
 ]
 
 [ LIST
-	The 0.2 series will mostly be patched with
-	bug fixes. For new features, go ahead to
-	0.3.
+	Walkthrough players in protection zone/non-pvp
+	Stamina system
 ]
