* Game protocol 9.82 support.
git-svn-id: svn://svn.otland.net/private/forgottenserver/branches/0.2@5932 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -36,7 +36,7 @@
 ]
 
 [ Milestone
-	Game protocol 9.81 support with new items.otb.
+	Game protocol 9.8/9.81/9.82 support with new items.otb.
 	Offline training!
 	New VIP list code with VIP entries stored on the server side.
 	Added three new mounts and the Demon outfit.
