--- a/doc/README
+++ b/doc/README
@@ -71,7 +71,7 @@
 	Linux: Debian/Ubuntu
 		Downloading required packages
 			Launch a terminal, and paste in this command:
-				apt-get install build-essential subversion libboost-dev libxml2-dev liblua5.1-0-dev libgmp3-dev libmysql++-dev libsqlite3-dev libboost-thread-dev libboost-regex-dev libboost-system-dev
+				apt-get install build-essential subversion libboost-dev libxml2-dev liblua5.1-0-dev libgmp3-dev libmysqlclient-dev libsqlite3-dev libboost-thread-dev libboost-regex-dev libboost-system-dev
 
 		Downloading the source code
 			Launch a terminal, and paste in this command:
